# Aphrodite-builder2

./: README.md  setup.py
config/: battery_targets.yaml  environments.yaml  precision_tiers.yaml
docs/: test-execution-prompt.md  test-plan.md
examples/: 01_design_for_voltage.py  02_daaq_battery_molecule_selection.md  02_daaq_battery_molecule_selection_en.md  04_planetary_environment.py
scripts/: run_tests.sh  setup.sh
src/: __init__.py  memory_native.py
src-rs/: Cargo.toml
src-rs/src/: chat.rs  config.rs  ffi.rs  hnsw.rs  lib.rs  main.rs  memory.rs  project.rs  router.rs  sona.rs
src/ai_interface/: __init__.py
src/ai_orchestrator/: __init__.py  autonomous_cluster.py  pipeline_controller.py  self_healing.py
src/backends/: __init__.py  engine.py  parser.py
src/bms/: __init__.py  algorithms.py
src/cell_design/: __init__.py  architect.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  constraint_designer.py  property_predictor.py  screening_engine.py
src/experimental/: __init__.py  methods.py
src/integration/: __init__.py  process.py
src/models/: __init__.py  batteryfold.py
src/monitoring/: __init__.py
src/quantum/: __init__.py  orca_input_generator.py  precision_manager.py  result_extractor.py
src/synthesis/: __init__.py  planner.py
src/workflows/: __init__.py  battery_analysis.py  planetary_adapter.py  precision_ladder.py  screening_pipeline.py
test/: test_e2e.py  test_python.py  test_workflows.py
