[package]
name = "batteryfold_memory"
version = "0.1.0"
edition = "2021"
description = "HNSW vector memory system for BatteryFold molecular design"
authors = ["Wei Liu <13322429758@163.com>"]
license = "MIT"

[lib]
name = "batteryfold_memory"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
rustc-hash = "2"

[profile.release]
opt-level = 3
lto = true
