[package]
name = "batteryfold"
version = "1.0.0"
edition = "2021"
description = "BatteryFold — AI-powered organic battery design platform"
authors = ["Wei Liu <13322429758@163.com>"]
license = "MIT"

[[bin]]
name = "batteryfold"
path = "src/main.rs"

[lib]
name = "batteryfold_core"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
rustc-hash = "2"
ureq = { version = "2", features = ["json"] }
rustyline = "14"
colored = "2"
dirs = "5"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
